Revert "[BACKPORT 2.20][PLAT-14696] DDL atomicity check metric and alert1"
Summary: This reverts commit b0ce5bc5e12eaa196b61064ab35ec1982bc3e65e.

Test Plan: Wait for dev Itests to pass

Reviewers: amalyshev, svarshney, sanketh, rmadhavan

Reviewed By: amalyshev, svarshney, rmadhavan

Subscribers: rmadhavan, yugaware

Differential Revision: https://phorge.dev.yugabyte.com/D37438